--- a/frontend/templates/projects.html
+++ b/frontend/templates/projects.html
@@ -21,7 +21,9 @@
 {% block main %}
 <main class="project-main">
     <div class="toolbar">
-        <div button></div>
+        <div class="buttons">
+            <styled-button disabled>Schedule Scan</styled-button>
+        </div>
         <input type="text" name="filter-projects" id="filter" placeholder="Filter projects..." autocomplete="off"
             autocorrect="off" autocapitalize="off" spellcheck="false" aria-label="Filter projects">
     </div>
