--- a/frontend/templates/project.html
+++ b/frontend/templates/project.html
@@ -15,7 +15,6 @@
         <b>{{project.name}}</b>
     </span>
     <span class="buttons">
-        <styled-button>Options</styled-button>
     </span>
 </header>
 {% endblock %}
@@ -24,9 +23,9 @@
 <main class="project-main">
     <div class="toolbar">
         <div class="buttons">
-            <styled-button disabled>Assign to...</styled-button>
-            <styled-button disabled>Review by...</styled-button>
-            <styled-button disabled>Mark as...</styled-button>
+            <styled-button id="assign-to-button" disabled>Assign to...</styled-button>
+            <styled-button id="review-by-button" disabled>Review by...</styled-button>
+            <styled-button id="mark-as-button" disabled>Mark as...</styled-button>
         </div>
         <input type="text" name="filter-documents" id="filter" placeholder="Filter documents..." autocomplete="off"
             autocorrect="off" autocapitalize="off" spellcheck="false" aria-label="Filter documents">
@@ -38,10 +37,15 @@
 <script>
     document.addEventListener('row-clicked', (event) => {
         const detail = event.detail;
-        console.log(`Row clicked in table ${detail.tableId}: ${detail.rowId}`);
         const url = "{{ url_for('document_page', document_id='[ID]') }}";
-        // Replace [ID] with the actual row ID
         window.location.href = url.replace("[ID]", detail.rowId);
+    });
+
+    document.addEventListener('selection-changed', (event) => {
+        const detail = event.detail;
+        document.getElementById('assign-to-button')?.setAttribute('disabled', !detail.atLeastOneSelected);
+        document.getElementById('review-by-button')?.setAttribute('disabled', !detail.atLeastOneSelected);
+        document.getElementById('mark-as-button')?.setAttribute('disabled', !detail.atLeastOneSelected);
     });
 </script>
 
