--- a/frontend/templates/base.html
+++ b/frontend/templates/base.html
@@ -5,9 +5,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="A tool to label pages, blocks and text within images and PDF files">
+    <meta name="author" content="Max Brixner">
+    <meta name="keywords" content="labeling, annotation, machine learning">
+    <meta name="theme-color" content="#ffffff">
 
     <title>Mrkr</title>
 
+    <link rel="icon" href="{{ url_for('static', path='/img/logo_64.png') }}" type="image/x-icon">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
