--- a/frontend/static/css/layout.css
+++ b/frontend/static/css/layout.css
@@ -1,12 +1,3 @@
-@font-face {
-    font-family: 'Geist';
-    font-style: normal;
-    font-weight: 100 900;
-    font-display: block;
-    src: local('Geist'),
-        url('/static/font/Geist-VariableFont_wght.ttf') format('woff2'),
-}
-
 h1,
 h2,
 h3,
@@ -26,53 +17,54 @@ h1 {
 html,
 body {
     height: 100%;
-    padding: 0;
     margin: 0;
+    padding: 0;
 }
 
 body {
-    padding: 0;
-    margin: 0;
     display: grid;
-    font-family: "Geist", sans-serif;
+    font-family: var(--font-family);
     font-optical-sizing: auto;
-    font-weight: normal;
+    font-size: var(--font-size-medium);
     font-style: normal;
+    font-weight: normal;
     grid-template-areas:
         "header"
         "main";
     grid-template-rows: auto 1fr;
-    min-height: 100vh;
     height: 100vh;
-    overflow: hidden;
+    margin: 0;
+    min-height: 100vh;
+    padding: 0;
 }
 
 header {
-    grid-area: header;
-    position: sticky;
     background-color: var(--surface-color);
-    top: 0;
+    grid-area: header;
     min-width: var(--min-layout-width);
+    position: sticky;
+    overflow: hidden;
+    top: 0;
     user-select: none;
 }
 
 main {
     grid-area: main;
-    min-width: var(--min-layout-width);
-    overflow: auto;
     height: 100%;
+    min-width: var(--min-layout-width);
+    overflow: hidden;
 }
 
 header.labeling-header,
 header.project-header {
     align-items: center;
+    border-bottom: 1px solid var(--border-color);
     display: grid;
-    gap: 2rem;
+    gap: var(--spacing-xxlarge);
     grid-template-areas:
         "logo path buttons";
     grid-template-columns: min-content 1fr min-content;
     padding: .5rem 1rem;
-    border-bottom: 1px solid var(--border-color);
 }
 
 header>span.path {
