--- a/frontend/templates/labeling.html
+++ b/frontend/templates/labeling.html
@@ -1,8 +1,8 @@
 {% extends "base.html" %}
 
 {% block scripts %}
-<script type="module" src="{{ url_for('static', path='/js/styled_link.js') }}"></script>
-<script type="module" src="{{ url_for('static', path='/js/styled_button.js') }}"></script>
+<script type="module" src="{{ url_for('static', path='/js/base/styled_link.js') }}"></script>
+<script type="module" src="{{ url_for('static', path='/js/base/styled_button.js') }}"></script>
 <script type="module" src="{{ url_for('static', path='/js/label_maker.js') }}"></script>
 {% endblock %}
 
