--- a/frontend/static/css/definitions.css
+++ b/frontend/static/css/definitions.css
@@ -170,6 +170,7 @@
     --filtered-table-chip-border-radius: var(--border-radius-xlarge);
     --filtered-table-chip-padding: var(--spacing-small) var(--spacing-medium);
     --filtered-table-sort-icon-opacity: 0.5;
+    --filtered-table-empty-message: 'No items found';
 
     --filtered-table-chip-processing-background-color: #90A4AE;
     --filtered-table-chip-processing-color: #000000;
