--- a/frontend/static/css/definitions.css
+++ b/frontend/static/css/definitions.css
@@ -198,21 +198,24 @@
     --styled-dialog-error-message: 'Error loading content';
     --styled-dialog-error-font-size: var(--font-size-medium);
 
-
-
-
-
+    /* Resizable Panes Variables */
     --resizable-panes-background-color: var(--background-color);
     --resizable-panes-handle-color: var(--border-color);
     --resizable-panes-handle-color-hover: var(--primary-color);
     --resizable-panes-handle-size: 1px;
 
+    /* Tab Container Variables */
     --tab-container-background-color: var(--background-color);
     --tab-container-tabbar-background-color: var(--background-color);
     --tab-container-tabbar-border-color: var(--border-color);
     --tab-container-tab-active-background-color: var(--surface-color);
     --tab-container-tab-active-border-color: var(--border-color);
     --tab-container-content-background-color: var(--surface-color);
+
+
+
+
+
 
     --document-viewer-background: var(--background-color);
     --document-viewer-page-background: var(--surface-color);
